fix nav overlaping issue ,added fonts for text,fix spacing for the sections:

--- a/styles.css
+++ b/styles.css
@@ -9,18 +9,33 @@ section {
   margin-top: 10px;
   height: 380px;
 }
+
 h1 {
+  font-weight: normal;
+  font-size: 37px;
+  margin: 0px 0;
   text-align: center;
   background-color: white;
+  font-family: 'Playfair Display SC', serif;
+
+
 }
+
 h2 {
   text-align: center;
   color: #35728b;
   margin-top: 80px;
-  font-size: 40px;
+  font-size: 45px;
+  font-family: 'Lato', sans-serif;
 }
+header h3{
+
+  font-family: 'Playfair Display SC', serif;
+  font-size: 35px;
+} 
 
 h3 {
+  font-family: 'Playfair Display SC', serif;
   font-size: 35px;
   text-align: center;
   margin-top: 45px;
@@ -45,7 +60,7 @@ h4 {
 .truckpic {
   height: 540px;
   width: 100%;
-  position: static;
+  position:initial;
 }
 .about {
   padding-left: 85px;
@@ -53,12 +68,11 @@ h4 {
 }
 
 .contactInfo {
-  position: absolute;
   background-color: rgba(255, 255, 255, 0.753);
-  top: 0px;
-  margin-top: 200px;
+  top: 170px;
   margin-right: 400px;
   margin-left: 250px;
+  position: absolute;
   width: 70%;
   height: 350px;
   border: 15px solid #1a6889;
@@ -73,6 +87,7 @@ h4 {
   height: 55px;
 }
 .fas {
+
   color: white;
   margin: 12px;
   font-size: 28px;
@@ -82,8 +97,8 @@ h4 {
   float: right;
   position: absolute;
   top: 395px;
-  left: 650px;
-  width: 470px;
+  left: 600px;
+  width: 545px;
   height: 55px;
   background-color: #1a6889;
 }
@@ -124,7 +139,7 @@ h4 {
   float: right;
   position: relative;
   width: 50%;
-  margin-top: -150px;
+  top: -200px;
 }
 
 .fi {
@@ -142,7 +157,10 @@ h4 {
   height: 500px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
-
+.service-text{
+  margin-top: 0px;
+  margin-bottom: 40px;
+}
 #contactUs h2 {
   color: #ffffff;
   margin-bottom: 20px;
@@ -196,7 +214,6 @@ h4 {
 
 @media (max-width: 1350px) {
   .contactInfo {
-    position: absolute;
     margin-left: 20%;
     width: 900px;
     border: 10px solid #1a6889;
@@ -217,7 +234,7 @@ h4 {
   .email-sec {
     top: 395px;
     left: 48%;
-    width: 430px;
+    width: 480px;
     height: 50px;
   }
   .far {
@@ -227,7 +244,6 @@ h4 {
 
 @media (max-width: 950px) {
   .contactInfo {
-    position: absolute;
     margin-left: 40px;
     width: 850px;
     border: 10px solid #1a6889;
@@ -247,12 +263,12 @@ h4 {
   }
   .email-sec {
     top: 395px;
-    left: 400px;
-    width: 430px;
+    left: 390px;
+    width: 460px;
     height: 50px;
   }
   .far {
-    font-size: 25px;
+    font-size: 24px;
   }
   .in-form {
     left: 15%;
@@ -280,7 +296,6 @@ h4 {
 }
 @media (max-width: 768px) {
   .contactInfo {
-    position: absolute;
     margin-left: 30px;
     width: 700px;
     border: 10px solid #1a6889;
@@ -301,11 +316,11 @@ h4 {
   .email-sec {
     top: 395px;
     left: 180px;
-    width: 430px;
+    width: 460px;
     height: 50px;
   }
   .far {
-    font-size: 25px;
+    font-size: 24px;
   }
   .in-form {
     left: 4%;
@@ -313,7 +328,7 @@ h4 {
   .service-icon {
     float: right;
     position: relative;
-    margin-top: -300px;
+    top: -300px;
     width: 50%;
   }
   .img-ser {
@@ -334,18 +349,31 @@ h4 {
 }
 
 @media (max-width: 428px) {
+  h1{
+    font-size: 45px;
+    margin-left: 10px;
+    height: 70px;
+  }
+
   .contactInfo {
     position: absolute;
+    margin-top: 120px;
     margin-left: 40px;
     width: 350px;
     border: 5px solid #1a6889;
   }
-  h3 {
+  .truckpic{
+    margin-top: 90px;
+  }
+  header h3{
     font-size: 25px;
+  }
+  h3 {
+    font-size: 20px;
     margin-top: 20px;
   }
   .number-sec {
-    top: 365px;
+    top: 440px;
     left: 120px;
     width: 200px;
     height: 40px;
@@ -354,13 +382,13 @@ h4 {
     font-size: 20px;
   }
   .email-sec {
-    top: 435px;
+    top: 504px;
     left: 60px;
     width: 310px;
-    height: 50px;
+    height: 40px;
   }
   .far {
-    font-size: 18px;
+    font-size: 16px;
   }
   .in-form {
     left: 5%;
@@ -412,10 +440,17 @@ h4 {
   width: 100%;
 
   }
+ #services {
+   height: 750px;
+ }
+  .service-text{
+    margin-top: 0%;
+  }
   .service-icon {
     float: bottom;
     position: relative;
-    margin-top: 10px;
+    margin-top: 0px;
+    top: 40px;
     width: 100%;
   }
 }
@@ -431,12 +466,15 @@ h4 {
     height: 330px;
     border: 5px solid #1a6889;
   }
+  h1{
+    font-size: 40px;
+  }
   h3 {
     font-size: 17px;
     margin-top: 15px;
   }
   .number-sec {
-    top: 325px;
+    top: 465px;
     left: 95px;
     width: 200px;
     height: 40px;
@@ -445,13 +483,13 @@ h4 {
     font-size: 20px;
   }
   .email-sec {
-    top: 392px;
+    top: 520px;
     left: 45px;
     width: 310px;
     height: 50px;
   }
   .far {
-    font-size: 18px;
+    font-size: 16px;
   }
   #fName {
     margin-left: 25%;
@@ -471,6 +509,9 @@ h4 {
   .truckpic {
     height: 450px;
   }
+  h1{
+    font-size: 40px;
+  }
   .contactInfo {
     position: absolute;
     margin-left: 3%;
@@ -484,6 +525,7 @@ h4 {
   h3 {
     font-size: 20px;
     margin-top: 15px;
+
   }
 
   section .about-text {
@@ -500,7 +542,7 @@ h4 {
     height: 300px;
   }
   .number-sec {
-    top: 325px;
+    top: 460px;
     left: 95px;
     width: 200px;
     height: 40px;
@@ -509,16 +551,16 @@ h4 {
     font-size: 20px;
   }
   .email-sec {
-    top: 392px;
+    top: 520px;
     left: 34px;
-    width: 310px;
-    height: 50px;
+    width: 312px;
+    height: 40px;
   }
   .in-form{
     height: 450px;
   }
   .far {
-    font-size: 18px;
+    font-size: 16px;
   }
   .text-ph {
     margin-left: -66px;
@@ -570,24 +612,36 @@ h4 {
 }
 
 @media (max-width: 360px) {
+  #aboutUs {
+   height: 300px;
+  }
+  #services{
+    height: 750px;
+  }
   .contactInfo {
     width: 325px;
     margin-left: 18px;
   }
+  
+
+  h3{
+    margin-top: 40px;
+  }
+  section .about-text{
+    margin-left: -20px;
+  }
   .number-sec {
-    top: 325px;
     left: 85px;
     width: 200px;
     height: 40px;
   }
   .email-sec {
-    top: 392px;
     left: 35px;
     width: 290px;
-    height: 50px;
+    height: 40px;
   }
   .far {
-    font-size: 17px;
+    font-size: 15px;
   }
   #fName {
     margin-left: 20%;
@@ -614,30 +668,13 @@ input {
   text-align: center;
 }
 
-h1 {
-  font-weight: normal;
-  font-size: 35px;
-  position: relative;
-  margin: 0px 0;
-}
-h1::before {
-  content: "";
-  position: absolute;
-  width: 100px;
-  height: 3px;
-  background-color: crimson;
-  top: 38px;
-  bottom: -10px;
-  left: 50%;
-  transform: translateX(-50%);
-  animation: animate 4s linear infinite;
-}
+
 @keyframes animate {
   0% {
     width: 100px;
   }
   50% {
-    width: 200px;
+    width: 250px;
   }
   100% {
     width: 100px;
@@ -687,7 +724,7 @@ nav ul li a:before {
 nav ul li a:hover:before {
   transform: scaleX(1);
   transform-origin: left;
-  transition: transform 0.4s linear;
+  transition: transform 0.3s linear;
 }
 
 label #btn,
@@ -709,7 +746,7 @@ nav ul li a {
   font-size: 17px;
 }
 
-@media (max-width: 860px) {
+@media (max-width: 428px) {
   label #btn {
     display: block;
   }
@@ -717,8 +754,8 @@ nav ul li a {
   ul {
     position: absolute;
     width: 100%;
-    background: #0d0d0d;
-    top: 100px;
+    background: #1a6889;
+    top: 70px;
     left: -100%;
     text-align: center;
     transition: all 0.5s;
